--- a/front-end/src/components/Modals/Modals.css
+++ b/front-end/src/components/Modals/Modals.css
@@ -20,8 +20,9 @@
   position: relative;
   padding: 28px 28px 36px;
   box-sizing: border-box;
-  max-width: 900px;
-  width: 100%;
+  max-width: 600px;
+  width: auto;
+  min-width: 400px;
   border-radius: 15px;
 }
 
